# shorts

./: .env.example  .gitignore  CLAUDE.md  COMFYUI_SETUP.md  README.md  STEP2_TEST_CHECKLIST.md  STEP4_REPORT.md  app_ui.py  audio_generator.py  clip_generator.py  comfyui_nodes.json  dynamic_scheduler.py  flux_simple_workflow.json  main.py  main_api.py  pyproject.toml  request.ipynb  requirements.txt  run_step4_b117572b.py  run_step5_manual.py  settings.json  start_server.bat  step0_ocr.py  step1_nlp.py  step2_tts.py  step2_vision.py  step3_audio.py  step3_scheduler.py  step4_clip.py  step5_video.py  test_full_pipeline.py  test_pipeline_v2.py  test_step0.py  test_step0_v2.py  test_step4_manual.py  test_step5_compose.py  test_step5_only.py  video_processor.py
.claude/: settings.local.json
.claude/agents/: art-director-agent.md  audio-visual-qa-agent.md  bgm-verification-agent.md  code-reviewer.md  historical-context-agent.md  nlp-validation-agent.md  ocr-validation-agent.md  pipeline-debug-agent.md  prd-validator.md  prd-writer-shorts.md  quality-assurance-agent.md  seo-metadata-agent.md  video-verification-agent.md
.claude/plans/: step2-quality-upgrade-roadmap.md  step5-video-composition.md
.claude/rules/: Security_Configuration.md  bug_fixes_and_lessons.md  cache-field-checklist.md  cache-management.md  code-style.md  data-flow.md  error_handling_logging.md  git-rules.md  naming_conventions.md  streamlit-patterns.md
api/: models.py  pipeline_runner.py  poem_registry.py
docs/: PRD_PROMPT.md
legacy/: step2_vision.py  step4_subtitle.py  step5_video_v1.py
notebook/: ocr_postcheck.py  step0_ocr.py  step1_nlp.py  step2_tts.py  step3_scheduler.py  step4_clip.py  step4_image.py  step5_bgm.py  step5_video.py  step6_bgm.py  step6_video.py  theme_config.py
tests/: conftest.py  test_integration.py  test_pipeline.py  test_unit.py
(+31 files in other folders)
